--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,7 @@ pylint = "*"
 django = "*"
 python-decouple = "*"
 djangorestframework = "*"
+django-cors-headers = "*"
 
 [requires]
 python_version = "3.7"
